crates/macros/context-derive/tests/ui/missing_config_attr.stderr
error: No field with #[config] attribute found, please add #[config] to the field that holds the `blueprint_runner::config::BlueprintEnvironment`
 --> tests/ui/missing_config_attr.rs:5:8
  |
5 | struct MyContext {
  |        ^^^^^^^^^
